--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "clsx": "^2.1.1",
     "framer-motion": "^11.11.9",
+    "mini-svg-data-uri": "^1.4.4",
     "next": "15.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
